--- a/web_app/templates/weather_form.html
+++ b/web_app/templates/weather_form.html
@@ -1,6 +1,5 @@
-{% extends "layout.html" %}
-
-{% block content %}
+{% extends "bootstrap_layout.html" %}
+{% set active_page = "weather_form" %}
 
 <h2>Weather Form</h2>
 
