--- a/web_app/templates/hello.html
+++ b/web_app/templates/hello.html
@@ -1,8 +1,9 @@
-{% extends "layout.html" %}
+{% extends "bootstrap_layout.html" %}
+{% set active_page = "hello" %}
 
 {% block content %}
 
-<h1>{{ other }}</h1>
+<h1>{{ message }}</h1>
 
 <p>This is a paragraph on the "hello" page.</p>
 
