--- a/web_app/templates/weather_form.html
+++ b/web_app/templates/weather_form.html
@@ -1,6 +1,8 @@
 {% extends "bootstrap_layout.html" %}
 {% set active_page = "weather_form" %}
 
+{% block content %}
+
 <h2>Weather Form</h2>
 
 <p>Request an hourly forecast for your zip code...</p>
